libs/ui/kis_painting_assistants_decoration.cpp
@@ -201,6 +201,7 @@ QPointF KisPaintingAssistantsDecoration::adjustPosition(const QPointF& point, co
         // In this mode we compute the best assistant during the initial
         // movement and then keep using that assistant. (Called the first
         // assistant).
+        bool foundAGoodAssistant = false;
         Q_FOREACH (KisPaintingAssistantSP assistant, assistants()) {
             if(assistant->isSnappingActive() == true){//this checks if the assistant in question has it's snapping boolean turned on//
                 QPointF pt = assistant->adjustPosition(point, strokeBegin, true);
@@ -210,9 +211,16 @@ QPointF KisPaintingAssistantsDecoration::adjustPosition(const QPointF& point, co
                     best = pt;
                     distance = dist;
                     d->firstAssistant = assistant;
+                    foundAGoodAssistant = true;
                 }
                 assistant->setFollowBrushPosition(true);
             }
+        }
+        if (!foundAGoodAssistant) {
+            // reset the first assistant if none of them are available
+            // that helps in case all of the assistants are disabled
+            // BUG:448187
+            d->firstAssistant = 0;
         }
     } else if (d->firstAssistant) {
         //make sure there's a first assistant to begin with.//
